--- a/.classpath
+++ b/.classpath
@@ -182,4 +182,5 @@
   <classpathentry kind="var" path="M2_REPO/com/chuusai/shapeless_2.11/2.3.2/shapeless_2.11-2.3.2.jar" sourcepath="M2_REPO/com/chuusai/shapeless_2.11/2.3.2/shapeless_2.11-2.3.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/typelevel/macro-compat_2.11/1.1.1/macro-compat_2.11-1.1.1.jar" sourcepath="M2_REPO/org/typelevel/macro-compat_2.11/1.1.1/macro-compat_2.11-1.1.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/spark/spark-sql-kafka-0-10_2.11/2.4.0/spark-sql-kafka-0-10_2.11-2.4.0.jar" sourcepath="M2_REPO/org/apache/spark/spark-sql-kafka-0-10_2.11/2.4.0/spark-sql-kafka-0-10_2.11-2.4.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/twitter4j/twitter4j-core/4.0.4/twitter4j-core-4.0.4.jar" sourcepath="M2_REPO/org/twitter4j/twitter4j-core/4.0.4/twitter4j-core-4.0.4-sources.jar"/>
 </classpath>
