--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 	<artifactId>spark-sql-kafka-0-10_2.11</artifactId>
 	<version>2.4.0</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>org.twitter4j</groupId>
+    <artifactId>twitter4j-core</artifactId>
+    <version>4.0.4</version>
+	</dependency>
+	
     
     
   </dependencies>
