--- a/.classpath
+++ b/.classpath
@@ -160,7 +160,7 @@
   <classpathentry kind="var" path="M2_REPO/com/carrotsearch/hppc/0.7.2/hppc-0.7.2.jar" sourcepath="M2_REPO/com/carrotsearch/hppc/0.7.2/hppc-0.7.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/spark/spark-streaming_2.11/2.4.0/spark-streaming_2.11-2.4.0.jar" sourcepath="M2_REPO/org/apache/spark/spark-streaming_2.11/2.4.0/spark-streaming_2.11-2.4.0-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/spark/spark-streaming-kafka-0-10_2.11/2.4.0/spark-streaming-kafka-0-10_2.11-2.4.0.jar" sourcepath="M2_REPO/org/apache/spark/spark-streaming-kafka-0-10_2.11/2.4.0/spark-streaming-kafka-0-10_2.11-2.4.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka-clients/2.0.0/kafka-clients-2.0.0.jar" sourcepath="M2_REPO/org/apache/kafka/kafka-clients/2.0.0/kafka-clients-2.0.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka-clients/0.10.2.1/kafka-clients-0.10.2.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mortbay/jetty/jetty/6.1.26/jetty-6.1.26.jar" sourcepath="M2_REPO/org/mortbay/jetty/jetty/6.1.26/jetty-6.1.26-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/asm/asm/3.1/asm-3.1.jar" sourcepath="M2_REPO/asm/asm/3.1/asm-3.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1-sources.jar"/>
@@ -183,4 +183,7 @@
   <classpathentry kind="var" path="M2_REPO/org/typelevel/macro-compat_2.11/1.1.1/macro-compat_2.11-1.1.1.jar" sourcepath="M2_REPO/org/typelevel/macro-compat_2.11/1.1.1/macro-compat_2.11-1.1.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/spark/spark-sql-kafka-0-10_2.11/2.4.0/spark-sql-kafka-0-10_2.11-2.4.0.jar" sourcepath="M2_REPO/org/apache/spark/spark-sql-kafka-0-10_2.11/2.4.0/spark-sql-kafka-0-10_2.11-2.4.0-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/twitter4j/twitter4j-core/4.0.4/twitter4j-core-4.0.4.jar" sourcepath="M2_REPO/org/twitter4j/twitter4j-core/4.0.4/twitter4j-core-4.0.4-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/jpountz/lz4/lz4/1.3.0/lz4-1.3.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/connect-json/0.10.2.1/connect-json-0.10.2.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/connect-api/0.10.2.1/connect-api-0.10.2.1.jar"/>
 </classpath>
