--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
     <version>4.0.4</version>
 	</dependency>
 	
+	
+	        <dependency>
+	    <groupId>org.apache.kafka</groupId>
+	    <artifactId>kafka-clients</artifactId>
+	    <version>0.10.2.1</version>
+	</dependency>
+        <dependency>
+	    <groupId>org.apache.kafka</groupId>
+	    <artifactId>connect-json</artifactId>
+	    <version>0.10.2.1</version>
+	</dependency>
+	
     
     
   </dependencies>
